--- a/Asset/style.css
+++ b/Asset/style.css
@@ -34,7 +34,7 @@ img{
 }
 .product-description{
     
-    padding: 20px 25px 0px 20px;
+    padding: 20px 25px 20px 20px;
     display: flex;
     flex-direction: column;
 }
@@ -97,3 +97,57 @@ img{
     gap:5px;
     border-radius: 5px;
 }
+.add-cart:hover, .add-cart:focus
+{
+    background-color: hsl(156.59, 46.07%, 17.45%);
+    cursor: pointer;
+}
+.img1{
+    display: block;
+}
+.img2{
+    display: none;
+}
+@media only screen 
+and (min-device-width : 320px) 
+and (max-device-width : 480px) {
+    .img1{
+        display: none;
+    }
+    .img2{
+        display: block;
+    }
+    .product-card{
+        height: 575px;
+        width: 325px;
+        flex-direction: column;
+    }
+    .card{
+        height: 350px;
+        width: 325px;
+    }
+    img{
+        height: 100%;
+        width:100%;
+        border-radius: 10px 10px 0 0;
+    }
+
+
+}
+/* @media only screen 
+and (min-device-width : 481px) 
+and (max-device-width : 767px) {
+    .container {
+        margin: 31% 26% 0 28%;
+        padding: 2%;
+    }
+}
+
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) {
+    .container {
+        margin: 31% 26% 0 28%;
+        padding: 2%;
+    }
+} */
